--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "public/**", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/public/index.html" }
-    ]
-  }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ]
+}
